--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -92,5 +93,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "143ec333-1c56-4d51-aa82-fa78ce8f520b"
   }
 }
